--- a/main.html
+++ b/main.html
@@ -8,7 +8,57 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+    <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Signup Form</title>
+</head>
+<body>
+  <form action="#" method="post">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" placeholder="Name" required><br>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" name="email" placeholder="Email" required><br>
+
+    <label>Gender:</label>
+    <input type="radio" id="gender_m" name="gender" value="male" required>
+    <label for="gender_m">Male</label>
+    <input type="radio" id="gender_f" name="gender" value="female" required>
+    <label for="gender_f">Female</label><br>
+
+    <label for="cars">Car Brands:</label>
+    <select id="cars" name="cars" required>
+      <option value="" disabled selected>--Please choose an option--</option>
+      <option value="volvo">Volvo</option>
+      <option value="saab">Saab</option>
+      <option value="mercedes">Mercedes</option>
+      <option value="audi">Audi</option>
+    </select><br>
+
+    <label for="age">Age:</label>
+    <input type="number" id="age" name="age" placeholder="Age" required><br>
+
+    <label for="dob">DOB:</label>
+    <input type="date" id="dob" name="dob" required><br>
+
+    <label for="tel">Phone Number:</label>
+    <input type="tel" id="tel" name="tel" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="xxx-xxx-xxxx"><br>
+
+    <label for="password">Password:</label>
+    <input type="password" id="password" name="password" placeholder="Password" required><br>
+
+    <input type="checkbox" id="tos" name="tos" required>
+    <label for="tos">I agree to the TOS</label><br>
+
+    <button type="submit">Submit</button>
+  </form>
+</body>
+</html>
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
